# wiwa_django_package_cookiecutter

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: Dockerfile  LICENCE  docker-compose.yml  env.example  pyproject.toml  runtests.py
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/tests/: settings.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: apps.py
