[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
authors = ["lukewiwa <luke.wiwa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "{{ cookiecutter.project_slug }}" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
homepage = "https://github.com/lukewiwa/{{ cookiecutter.project_slug }}"

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=4.2"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.3"
black = "^23.10.0"
pyright = "^1.1.332"
django-types = "^0.19.1"
ruff = "^0.1.0"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
typeCheckingMode = "basic"
